# smart-luckin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
skill/: SKILL.md
src/luckin/: __init__.py  __main__.py  amap.py  attrs.py  cli.py  client.py  config.py  utils.py
src/luckin/commands/: __init__.py  config_cmd.py  locate.py  menu.py  order.py  product.py  shops.py
tests/: test_check_store_hours.py  test_order_time.py  test_switch_specs.py
