[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-luckin"
version = "0.1.0"
description = "smart-luckin — 基于瑞幸官方 MCP/CLI 之上的点单封装,把 LLM 运行时编排前置固化为代码"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "AD207warlord"}]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "requests>=2.25",
]
keywords = ["luckin", "coffee", "mcp", "cli", "ordering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

[project.scripts]
smart-luckin = "luckin.cli:cli"

[project.urls]
Homepage = "https://github.com/AD207warlord/smart-luckin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
luckin = ["*.md"]
